--- a/linear_algebra/notebook/linear_regression.ipynb
+++ b/linear_algebra/notebook/linear_regression.ipynb
@@ -8,8 +8,8 @@
     "The database of common fish in the market is a good example of problem that is solvable by linear regression. In this example, the objective is to predict the weight of the fish based on length, height, and width.\n",
     "\n",
     "### Dataset\n",
-    "The dataset can be found here: https://www.kaggle.com/aungpyaeap/fish-market\n",
-    "Please download the dataset and extract the file `File.csv` in `data` folder. \n",
+    "The dataset can be found here: https://www.kaggle.com/aungpyaeap/fish-market.\n",
+    "The file `File.csv` is in `data` folder. \n",
     "\n",
     "In this tutorial, we will use the following python libraries for machine learning.\n",
     "\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,124 +80,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>28</td>\n",
-       "      <td>Bream</td>\n",
-       "      <td>850.0</td>\n",
-       "      <td>32.8</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>41.6</td>\n",
-       "      <td>16.8896</td>\n",
-       "      <td>6.1984</td>\n",
+       "      <td>56</td>\n",
+       "      <td>Whitefish</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>8.1454</td>\n",
+       "      <td>4.2485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>108</td>\n",
-       "      <td>Perch</td>\n",
-       "      <td>320.0</td>\n",
-       "      <td>27.8</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>31.6</td>\n",
-       "      <td>7.6156</td>\n",
-       "      <td>4.7716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>30</td>\n",
+       "      <td>26</td>\n",
        "      <td>Bream</td>\n",
-       "      <td>920.0</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>32.0</td>\n",
        "      <td>35.0</td>\n",
-       "      <td>38.5</td>\n",
-       "      <td>44.1</td>\n",
-       "      <td>18.0369</td>\n",
-       "      <td>6.3063</td>\n",
+       "      <td>40.6</td>\n",
+       "      <td>16.3618</td>\n",
+       "      <td>6.0900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>75</td>\n",
+       "      <td>147</td>\n",
+       "      <td>Smelt</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>10.6</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>1.7284</td>\n",
+       "      <td>1.1484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>117</td>\n",
        "      <td>Perch</td>\n",
-       "      <td>51.5</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>16.2</td>\n",
-       "      <td>17.2</td>\n",
-       "      <td>4.5924</td>\n",
-       "      <td>2.6316</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>84</td>\n",
-       "      <td>Perch</td>\n",
-       "      <td>125.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>22.5</td>\n",
-       "      <td>5.6925</td>\n",
-       "      <td>3.6675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>128</td>\n",
-       "      <td>Pike</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>32.3</td>\n",
-       "      <td>34.8</td>\n",
-       "      <td>5.5680</td>\n",
-       "      <td>3.3756</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>112</td>\n",
-       "      <td>Perch</td>\n",
-       "      <td>685.0</td>\n",
-       "      <td>34.0</td>\n",
+       "      <td>650.0</td>\n",
        "      <td>36.5</td>\n",
        "      <td>39.0</td>\n",
-       "      <td>10.8810</td>\n",
-       "      <td>6.8640</td>\n",
+       "      <td>41.4</td>\n",
+       "      <td>11.1366</td>\n",
+       "      <td>6.0030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>85</td>\n",
-       "      <td>Perch</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>19.3</td>\n",
-       "      <td>21.3</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>6.3840</td>\n",
-       "      <td>3.5340</td>\n",
+       "      <td>142</td>\n",
+       "      <td>Pike</td>\n",
+       "      <td>1600.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>9.6000</td>\n",
+       "      <td>6.1440</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>145</td>\n",
-       "      <td>Smelt</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>9.3</td>\n",
-       "      <td>9.8</td>\n",
-       "      <td>10.8</td>\n",
-       "      <td>1.7388</td>\n",
-       "      <td>1.0476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>20</td>\n",
+       "      <td>19</td>\n",
        "      <td>Bream</td>\n",
-       "      <td>575.0</td>\n",
-       "      <td>31.3</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>15.1285</td>\n",
-       "      <td>5.5695</td>\n",
+       "      <td>650.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>33.5</td>\n",
+       "      <td>38.7</td>\n",
+       "      <td>14.4738</td>\n",
+       "      <td>5.7276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>115</td>\n",
+       "      <td>Perch</td>\n",
+       "      <td>690.0</td>\n",
+       "      <td>34.6</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>10.5717</td>\n",
+       "      <td>6.3666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>42</td>\n",
+       "      <td>Roach</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>23.7</td>\n",
+       "      <td>6.1146</td>\n",
+       "      <td>3.2943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>Bream</td>\n",
+       "      <td>610.0</td>\n",
+       "      <td>30.9</td>\n",
+       "      <td>33.5</td>\n",
+       "      <td>38.6</td>\n",
+       "      <td>15.6330</td>\n",
+       "      <td>5.1338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>89</td>\n",
+       "      <td>Perch</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>23.5</td>\n",
+       "      <td>5.8750</td>\n",
+       "      <td>3.5250</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Species  Weight  Length1  Length2  Length3   Height   Width\n",
-       "28    Bream   850.0     32.8     36.0     41.6  16.8896  6.1984\n",
-       "108   Perch   320.0     27.8     30.0     31.6   7.6156  4.7716\n",
-       "30    Bream   920.0     35.0     38.5     44.1  18.0369  6.3063\n",
-       "75    Perch    51.5     15.0     16.2     17.2   4.5924  2.6316\n",
-       "84    Perch   125.0     19.0     21.0     22.5   5.6925  3.6675\n",
-       "128    Pike   200.0     30.0     32.3     34.8   5.5680  3.3756\n",
-       "112   Perch   685.0     34.0     36.5     39.0  10.8810  6.8640\n",
-       "85    Perch   130.0     19.3     21.3     22.8   6.3840  3.5340\n",
-       "145   Smelt     6.7      9.3      9.8     10.8   1.7388  1.0476\n",
-       "20    Bream   575.0     31.3     34.0     39.5  15.1285  5.5695"
+       "       Species  Weight  Length1  Length2  Length3   Height   Width\n",
+       "56   Whitefish   270.0     24.1     26.5     29.3   8.1454  4.2485\n",
+       "26       Bream   720.0     32.0     35.0     40.6  16.3618  6.0900\n",
+       "147      Smelt     7.0     10.1     10.6     11.6   1.7284  1.1484\n",
+       "117      Perch   650.0     36.5     39.0     41.4  11.1366  6.0030\n",
+       "142       Pike  1600.0     56.0     60.0     64.0   9.6000  6.1440\n",
+       "19       Bream   650.0     31.0     33.5     38.7  14.4738  5.7276\n",
+       "115      Perch   690.0     34.6     37.0     39.3  10.5717  6.3666\n",
+       "42       Roach   120.0     19.4     21.0     23.7   6.1146  3.2943\n",
+       "18       Bream   610.0     30.9     33.5     38.6  15.6330  5.1338\n",
+       "89       Perch   135.0     20.0     22.0     23.5   5.8750  3.5250"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "Species     56     35     20    17     14      11          6"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "Width    0.886507  0.867050  0.873547  0.878520  0.792881  1.000000"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "Width       8.142  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
        "0.8861940780217027"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "0.868175950058243"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "       -10.2262983 ])"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
        "0.6764215806603961"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1148,13 +1148,13 @@
        "0.6243923434211206"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = np.matmul(np.array(X_test),X)\n",
+    "y_pred_pi = np.matmul(np.array(X_test),X)\n",
     "r2_score(y_test, y_pred_pi)"
    ]
   },
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1243,13 +1243,6 @@
     "plt.ylabel('Weight of the fish')\n",
     "plt.title('Linear Regression Model for Weight Estimation');"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
