--- a/linear_algebra/notebook/numpy_intro.ipynb
+++ b/linear_algebra/notebook/numpy_intro.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -175,7 +175,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-49-8c36aca4effd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# this is an error since a tuple can not be changed after initialization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-8c36aca4effd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# this is an error since a tuple can not be changed after initialization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
      ]
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -296,7 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  4   9  -3  -9   2  -7  -7   2   1  -4   6  -7  -8  -3 -10   1]\n",
+      "[  4  -7   5   5   2  -4   1   5   6  -7  -9  -2   2  -8 -10  -7]\n",
       "(16,)\n"
      ]
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -335,34 +335,34 @@
      "output_type": "stream",
      "text": [
       "[[  4]\n",
-      " [  9]\n",
-      " [ -3]\n",
-      " [ -9]\n",
-      " [  2]\n",
       " [ -7]\n",
-      " [ -7]\n",
+      " [  5]\n",
+      " [  5]\n",
       " [  2]\n",
-      " [  1]\n",
       " [ -4]\n",
+      " [  1]\n",
+      " [  5]\n",
       " [  6]\n",
       " [ -7]\n",
+      " [ -9]\n",
+      " [ -2]\n",
+      " [  2]\n",
       " [ -8]\n",
-      " [ -3]\n",
       " [-10]\n",
-      " [  1]]\n",
+      " [ -7]]\n",
       "(16, 1)\n",
-      "[[  4   9  -3  -9   2  -7  -7   2   1  -4   6  -7  -8  -3 -10   1]]\n",
+      "[[  4  -7   5   5   2  -4   1   5   6  -7  -9  -2   2  -8 -10  -7]]\n",
       "(1, 16)\n",
-      "[[  4   9  -3  -9]\n",
-      " [  2  -7  -7   2]\n",
-      " [  1  -4   6  -7]\n",
-      " [ -8  -3 -10   1]]\n",
+      "[[  4  -7   5   5]\n",
+      " [  2  -4   1   5]\n",
+      " [  6  -7  -9  -2]\n",
+      " [  2  -8 -10  -7]]\n",
       "(4, 4)\n",
-      "[[[  4   9  -3  -9]\n",
-      "  [  2  -7  -7   2]]\n",
+      "[[[  4  -7   5   5]\n",
+      "  [  2  -4   1   5]]\n",
       "\n",
-      " [[  1  -4   6  -7]\n",
-      "  [ -8  -3 -10   1]]]\n",
+      " [[  6  -7  -9  -2]\n",
+      "  [  2  -8 -10  -7]]]\n",
       "(2, 2, 4)\n"
      ]
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -418,14 +418,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-3  0]\n",
-      " [-4 -4]] : a\n",
-      "[[ 1 -2]\n",
-      " [ 3 -4]] : b\n",
-      "[[-2 -2]\n",
-      " [-1 -8]] : a+b\n",
-      "[[-2 -2]\n",
-      " [-1 -8]] : a+b\n"
+      "[[-4  1]\n",
+      " [ 3 -4]] : a\n",
+      "[[-3 -3]\n",
+      " [-1 -2]] : b\n",
+      "[[-7 -2]\n",
+      " [ 2 -6]] : a+b\n",
+      "[[-7 -2]\n",
+      " [ 2 -6]] : a+b\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -467,22 +467,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-4 -4]\n",
-      " [-2 -4]] : a\n",
-      "[[ 3 -3]\n",
-      " [ 3  1]] : b\n",
-      "[[-7 -1]\n",
-      " [-5 -5]] : a-b\n",
-      "[[-7 -1]\n",
-      " [-5 -5]] : a-b\n",
-      "[[-12  12]\n",
-      " [ -6  -4]] : a*b\n",
-      "[[-12  12]\n",
-      " [ -6  -4]] : a*b\n",
-      "[[-1.33333333  1.33333333]\n",
-      " [-0.66666667 -4.        ]] : a/b\n",
-      "[[-1.33333333  1.33333333]\n",
-      " [-0.66666667 -4.        ]] : a/b\n"
+      "[[1 2]\n",
+      " [3 2]] : a\n",
+      "[[1 0]\n",
+      " [3 1]] : b\n",
+      "[[0 2]\n",
+      " [0 1]] : a-b\n",
+      "[[0 2]\n",
+      " [0 1]] : a-b\n",
+      "[[1 0]\n",
+      " [9 2]] : a*b\n",
+      "[[1 0]\n",
+      " [9 2]] : a*b = Hadamard product\n",
+      "[[7 2]\n",
+      " [9 2]] : a*b = linear algebra mul\n",
+      "Divide by zero is not defined.\n"
      ]
     }
    ],
@@ -496,10 +495,13 @@
     "# alternatively using subtract() method\n",
     "print(np.subtract(a,b), \": a-b\")\n",
     "\n",
-    "# using * operator\n",
+    "# using * operator (Hadamard Product or element-wise multiply)\n",
     "print(a*b, \": a*b\")\n",
     "# alternatively using multiply() method\n",
-    "print(np.multiply(a,b), \": a*b\")\n",
+    "print(np.multiply(a,b), \": a*b = Hadamard product\")\n",
+    "\n",
+    "# matrix multiply as we know it in linear algebra\n",
+    "print(np.matmul(a,b), \": a*b = linear algebra mul\")\n",
     "\n",
     "if b.all():\n",
     "    print(a/b, \": a/b\")\n",
@@ -521,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -536,8 +538,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-24   8]\n",
-      " [-18   2]] : a matmul b\n"
+      "[[7 2]\n",
+      " [9 2]] : a matmul b\n"
      ]
     }
    ],
@@ -558,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -606,17 +608,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-2 -3 -1 -1]\n",
-      " [-2 -2  2  2]\n",
-      " [-3  1  0 -2]\n",
-      " [ 2  1 -1 -3]]\n"
+      "[[ 2  0 -1  2]\n",
+      " [ 0  1 -2  2]\n",
+      " [ 1 -2 -1 -3]\n",
+      " [-1  2  2  0]]\n"
      ]
     }
    ],
@@ -627,17 +629,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-2 -2 -3  2]\n",
-      " [-3 -2  1  1]\n",
-      " [-1  2  0 -1]\n",
-      " [-1  2 -2 -3]]\n"
+      "[[ 2  0  1 -1]\n",
+      " [ 0  1 -2  2]\n",
+      " [-1 -2 -1  2]\n",
+      " [ 2  2 -3  0]]\n"
      ]
     }
    ],
@@ -647,14 +649,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-7\n"
+      "2\n"
      ]
     }
    ],
@@ -664,14 +666,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2 -2  0 -3]\n"
+      "[ 2  1 -1  0]\n"
      ]
     }
    ],
@@ -681,17 +683,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.05263158  0.07894737 -0.21052632  0.21052632]\n",
-      " [-0.21052632 -0.18421053  0.15789474 -0.15789474]\n",
-      " [-0.23684211  0.60526316  0.05263158  0.44736842]\n",
-      " [-0.02631579 -0.21052632 -0.10526316 -0.39473684]]\n"
+      "[[ 0.51851852 -0.07407407  0.2962963   0.33333333]\n",
+      " [ 0.14814815  0.40740741  0.37037037  0.66666667]\n",
+      " [ 0.11111111 -0.44444444 -0.22222222 -0.        ]\n",
+      " [ 0.03703704 -0.14814815 -0.40740741 -0.33333333]]\n"
      ]
     }
    ],
@@ -721,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -774,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -817,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -855,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -892,18 +894,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1 -3  2 -1  2]\n",
-      " [ 0  0 -2  1 -2]\n",
-      " [-2 -1  1 -2 -3]\n",
-      " [ 1  2 -1  0  0]]\n",
-      "[ 1 -3 -7  2]\n"
+      "[[-1  0 -1  2 -1]\n",
+      " [ 1  1 -1 -2  2]\n",
+      " [-1 -1 -3 -1  0]\n",
+      " [ 1  1 -2 -3  2]]\n",
+      "[-1  1 -6 -1]\n"
      ]
     }
    ],
@@ -916,14 +918,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0 -2  0 -2 -3]\n"
+      "[ 0  1 -7 -4  3]\n"
      ]
     }
    ],
@@ -936,12 +938,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also get the sum o all elemennts:"
+    "We can also get the sum of all elemennts:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -966,17 +968,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ -5  -5   0   2  -7]\n",
-      " [ -9 -10  -1  -5   5]\n",
-      " [ -8   5  -2   8   0]\n",
-      " [ -8   1  -1  -2  -2]]\n",
+      "[[ -8 -10   6  -4   6]\n",
+      " [ -1  -8  -4   8  -5]\n",
+      " [  1 -10  -5  -4   0]\n",
+      " [-10   2 -10  -8   2]]\n",
       "8\n"
      ]
     }
@@ -996,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1020,17 +1022,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 5  5  0  2  7]\n",
-      " [ 9 10  1  5  5]\n",
-      " [ 8  5  2  8  0]\n",
-      " [ 8  1  1  2  2]]\n"
+      "[[ 8 10  6  4  6]\n",
+      " [ 1  8  4  8  5]\n",
+      " [ 1 10  5  4  0]\n",
+      " [10  2 10  8  2]]\n"
      ]
     }
    ],
@@ -1040,17 +1042,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 25  25   0   4  49]\n",
-      " [ 81 100   1  25  25]\n",
-      " [ 64  25   4  64   0]\n",
-      " [ 64   1   1   4   4]]\n"
+      "[[ 64 100  36  16  36]\n",
+      " [  1  64  16  64  25]\n",
+      " [  1 100  25  16   0]\n",
+      " [100   4 100  64   4]]\n"
      ]
     }
    ],
@@ -1067,17 +1069,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.23606798 2.23606798 0.         1.41421356 2.64575131]\n",
-      " [3.         3.16227766 1.         2.23606798 2.23606798]\n",
-      " [2.82842712 2.23606798 1.41421356 2.82842712 0.        ]\n",
-      " [2.82842712 1.         1.         1.41421356 1.41421356]]\n"
+      "[[2.82842712 3.16227766 2.44948974 2.         2.44948974]\n",
+      " [1.         2.82842712 2.         2.82842712 2.23606798]\n",
+      " [1.         3.16227766 2.23606798 2.         0.        ]\n",
+      " [3.16227766 1.41421356 3.16227766 2.82842712 1.41421356]]\n"
      ]
     }
    ],
