--- a/linear_algebra/notebook/numpy_intro.ipynb
+++ b/linear_algebra/notebook/numpy_intro.ipynb
@@ -314,7 +314,7 @@
     "id": "ttc-G2m9mIZM"
    },
    "source": [
-    "Let's reshape `a` as `[16,1]`, `[1,16]`, `[4,4]`, `[2,2,4]`. To minimize the repeatition of code, let us build a reusable function for reshaping tensors and use it to reshape our `(16,)` tensor into the target shape."
+    "Let's reshape `a` as `[16,1]`, `[1,16]`, `[4,4]`, `[2,2,4]`. To minimize the repetition of code, let us build a reusable function for reshaping tensors and use it to reshape our `(16,)` tensor into the target shape."
    ]
   },
   {
