--- a/gmm/notebook/gmm.ipynb
+++ b/gmm/notebook/gmm.ipynb
@@ -37,12 +37,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scikit Learn"
+    "## GMM using Scikit Learn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -61,13 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[21.76405235 20.40015721]\n",
-      " [20.97873798 22.2408932 ]\n",
-      " [21.86755799 19.02272212]\n",
-      " ...\n",
-      " [ 3.63154983 -0.24845295]\n",
-      " [-2.07822107 -0.42879847]\n",
-      " [ 2.06396262  1.82110875]]\n"
+      "(50, 50)\n"
      ]
     }
    ],
@@ -96,19 +90,25 @@
     "plt.title('Negative log-likelihood predicted by a GMM')\n",
     "plt.axis('tight')\n",
     "plt.show()\n",
-    "print(X_train)"
+    "print(Z.shape)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EM"
+    "## GMM using Expectation Maximization (EMM)\n",
+    "1. Initialize mean, covariance matrix, and weights\n",
+    "2. E-Step: Compute Responsibilities\n",
+    "![responsibilities](respon.png)\n",
+    "3. M-Step: Update mean, covariance matrix, and weights\n",
+    "![responsibilities](mean.png)\n",
+    "4. Go to step 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +122,8 @@
       "\n",
       " [[1.13328030e+01 2.25048269e+00]\n",
       "  [2.25048269e+00 8.77008968e-01]]]\n",
-      "pi [[0.98021681]\n",
-      " [0.17843165]]\n"
+      "pi [[0.80011559]\n",
+      " [0.23802793]]\n"
      ]
     }
    ],
@@ -146,6 +146,8 @@
     "    g_val_sum = np.repeat(g_val_sum, n_components, axis=0)\n",
     "    \n",
     "    p = np.repeat(pi, X_train.shape[0], axis=1)\n",
+    "    \n",
+    "    \n",
     "    r = np.multiply(p, g_val)\n",
     "    r = np.divide(r, g_val_sum)\n",
     "    \n",
@@ -187,16 +189,8 @@
     "        print(\"mu:\", mu)\n",
     "        print('sigma:', sigma)\n",
     "        print('pi', pi)\n",
-    "    \n",
     "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
