--- a/linear_algebra/notebook/numpy_intro.ipynb
+++ b/linear_algebra/notebook/numpy_intro.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -175,7 +175,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-8c36aca4effd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# this is an error since a tuple can not be changed after initialization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/Users/rowel/github/roatienza/ml/linear_algebra/notebook/numpy_intro.ipynb Cell 9\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rowel/github/roatienza/ml/linear_algebra/notebook/numpy_intro.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(a)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rowel/github/roatienza/ml/linear_algebra/notebook/numpy_intro.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# this is an error since a tuple can not be changed after initialization\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rowel/github/roatienza/ml/linear_algebra/notebook/numpy_intro.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m a\u001b[39m.\u001b[39;49mappend(\u001b[39m3\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rowel/github/roatienza/ml/linear_algebra/notebook/numpy_intro.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m a \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (\u001b[39m3\u001b[39m)\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
      ]
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -296,7 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  4  -7   5   5   2  -4   1   5   6  -7  -9  -2   2  -8 -10  -7]\n",
+      "[  9   0   9  -8  -1  -2  -8 -10   6   2   9  -8   4   5  -5   4]\n",
       "(16,)\n"
      ]
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -334,35 +334,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  4]\n",
-      " [ -7]\n",
-      " [  5]\n",
-      " [  5]\n",
-      " [  2]\n",
-      " [ -4]\n",
-      " [  1]\n",
-      " [  5]\n",
-      " [  6]\n",
-      " [ -7]\n",
-      " [ -9]\n",
+      "[[  9]\n",
+      " [  0]\n",
+      " [  9]\n",
+      " [ -8]\n",
+      " [ -1]\n",
       " [ -2]\n",
-      " [  2]\n",
       " [ -8]\n",
       " [-10]\n",
-      " [ -7]]\n",
+      " [  6]\n",
+      " [  2]\n",
+      " [  9]\n",
+      " [ -8]\n",
+      " [  4]\n",
+      " [  5]\n",
+      " [ -5]\n",
+      " [  4]]\n",
       "(16, 1)\n",
-      "[[  4  -7   5   5   2  -4   1   5   6  -7  -9  -2   2  -8 -10  -7]]\n",
+      "[[  9   0   9  -8  -1  -2  -8 -10   6   2   9  -8   4   5  -5   4]]\n",
       "(1, 16)\n",
-      "[[  4  -7   5   5]\n",
-      " [  2  -4   1   5]\n",
-      " [  6  -7  -9  -2]\n",
-      " [  2  -8 -10  -7]]\n",
+      "[[  9   0   9  -8]\n",
+      " [ -1  -2  -8 -10]\n",
+      " [  6   2   9  -8]\n",
+      " [  4   5  -5   4]]\n",
       "(4, 4)\n",
-      "[[[  4  -7   5   5]\n",
-      "  [  2  -4   1   5]]\n",
+      "[[[  9   0   9  -8]\n",
+      "  [ -1  -2  -8 -10]]\n",
       "\n",
-      " [[  6  -7  -9  -2]\n",
-      "  [  2  -8 -10  -7]]]\n",
+      " [[  6   2   9  -8]\n",
+      "  [  4   5  -5   4]]]\n",
       "(2, 2, 4)\n"
      ]
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -418,14 +418,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-4  1]\n",
-      " [ 3 -4]] : a\n",
-      "[[-3 -3]\n",
-      " [-1 -2]] : b\n",
-      "[[-7 -2]\n",
-      " [ 2 -6]] : a+b\n",
-      "[[-7 -2]\n",
-      " [ 2 -6]] : a+b\n"
+      "[[-2 -4]\n",
+      " [ 0 -4]] : a\n",
+      "[[ 3 -2]\n",
+      " [ 2 -1]] : b\n",
+      "[[ 1 -6]\n",
+      " [ 2 -5]] : a+b\n",
+      "[[ 1 -6]\n",
+      " [ 2 -5]] : a+b\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -462,29 +462,7 @@
     "id": "KVudP_QW3cs-",
     "outputId": "d042e752-dc7f-4e77-d057-7bbc998fa507"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2]\n",
-      " [3 2]] : a\n",
-      "[[1 0]\n",
-      " [3 1]] : b\n",
-      "[[0 2]\n",
-      " [0 1]] : a-b\n",
-      "[[0 2]\n",
-      " [0 1]] : a-b\n",
-      "[[1 0]\n",
-      " [9 2]] : a*b\n",
-      "[[1 0]\n",
-      " [9 2]] : a*b = Hadamard product\n",
-      "[[7 2]\n",
-      " [9 2]] : a*b = linear algebra mul\n",
-      "Divide by zero is not defined.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.random.randint(-4,4,(2,2))\n",
     "b = np.random.randint(-4,4,(2,2))\n",
@@ -523,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -533,16 +511,7 @@
     "id": "wDAMrhu0_s5O",
     "outputId": "db3c5aff-8204-4159-cd5e-02ca2d71590d"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[7 2]\n",
-      " [9 2]] : a matmul b\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(np.matmul(a,b), \": a matmul b\")"
    ]
@@ -560,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -570,19 +539,7 @@
     "id": "h-ktJjjbNOs9",
     "outputId": "00686fcd-c21a-4960-fe9e-c7ae2e054c4c"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  2 -1]] : a\n",
-      "[[1]\n",
-      " [2]\n",
-      " [1]] : b\n",
-      "[[4]] : a dot b\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.array([1,2,-1])\n",
     "a = np.reshape(a, (1,-1))\n",
@@ -608,17 +565,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2  0 -1  2]\n",
-      " [ 0  1 -2  2]\n",
-      " [ 1 -2 -1 -3]\n",
-      " [-1  2  2  0]]\n"
+      "[[ 0 -2 -2 -2]\n",
+      " [ 1 -1 -1 -3]\n",
+      " [-3  2  0 -1]\n",
+      " [ 2  0  0  0]]\n"
      ]
     }
    ],
@@ -629,17 +586,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2  0  1 -1]\n",
-      " [ 0  1 -2  2]\n",
-      " [-1 -2 -1  2]\n",
-      " [ 2  2 -3  0]]\n"
+      "[[ 0  1 -3  2]\n",
+      " [-2 -1  2  0]\n",
+      " [-2 -1  0  0]\n",
+      " [-2 -3 -1  0]]\n"
      ]
     }
    ],
@@ -649,14 +606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "-1\n"
      ]
     }
    ],
@@ -666,14 +623,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2  1 -1  0]\n"
+      "[ 0 -1  0  0]\n"
      ]
     }
    ],
@@ -683,17 +640,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.51851852 -0.07407407  0.2962963   0.33333333]\n",
-      " [ 0.14814815  0.40740741  0.37037037  0.66666667]\n",
-      " [ 0.11111111 -0.44444444 -0.22222222 -0.        ]\n",
-      " [ 0.03703704 -0.14814815 -0.40740741 -0.33333333]]\n"
+      "[[-7.40148683e-17 -0.00000000e+00 -0.00000000e+00  5.00000000e-01]\n",
+      " [ 1.25000000e-01 -2.50000000e-01  5.00000000e-01  8.75000000e-01]\n",
+      " [-8.75000000e-01  7.50000000e-01 -5.00000000e-01 -1.12500000e+00]\n",
+      " [ 2.50000000e-01 -5.00000000e-01 -0.00000000e+00  2.50000000e-01]]\n"
      ]
     }
    ],
@@ -723,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -776,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -819,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -857,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -894,18 +851,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1  0 -1  2 -1]\n",
-      " [ 1  1 -1 -2  2]\n",
-      " [-1 -1 -3 -1  0]\n",
-      " [ 1  1 -2 -3  2]]\n",
-      "[-1  1 -6 -1]\n"
+      "[[-3  0  1 -1  0]\n",
+      " [-1 -1 -2  2  2]\n",
+      " [-3  1 -3 -1  0]\n",
+      " [-1 -1 -1  2 -2]]\n",
+      "[-3  0 -6 -3]\n"
      ]
     }
    ],
@@ -918,14 +875,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0  1 -7 -4  3]\n"
+      "[-8 -1 -5  2  0]\n"
      ]
     }
    ],
@@ -943,14 +900,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-7\n"
+      "-12\n"
      ]
     }
    ],
@@ -968,17 +925,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ -8 -10   6  -4   6]\n",
-      " [ -1  -8  -4   8  -5]\n",
-      " [  1 -10  -5  -4   0]\n",
-      " [-10   2 -10  -8   2]]\n",
+      "[[-1 -8 -5 -9  8]\n",
+      " [ 3 -6 -1  2 -6]\n",
+      " [ 2 -5 -3 -9 -8]\n",
+      " [-5 -9 -6 -9  2]]\n",
       "8\n"
      ]
     }
@@ -998,14 +955,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-10\n"
+      "-9\n"
      ]
     }
    ],
@@ -1022,17 +979,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8 10  6  4  6]\n",
-      " [ 1  8  4  8  5]\n",
-      " [ 1 10  5  4  0]\n",
-      " [10  2 10  8  2]]\n"
+      "[[1 8 5 9 8]\n",
+      " [3 6 1 2 6]\n",
+      " [2 5 3 9 8]\n",
+      " [5 9 6 9 2]]\n"
      ]
     }
    ],
@@ -1042,17 +999,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 64 100  36  16  36]\n",
-      " [  1  64  16  64  25]\n",
-      " [  1 100  25  16   0]\n",
-      " [100   4 100  64   4]]\n"
+      "[[ 1 64 25 81 64]\n",
+      " [ 9 36  1  4 36]\n",
+      " [ 4 25  9 81 64]\n",
+      " [25 81 36 81  4]]\n"
      ]
     }
    ],
@@ -1069,17 +1026,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.82842712 3.16227766 2.44948974 2.         2.44948974]\n",
-      " [1.         2.82842712 2.         2.82842712 2.23606798]\n",
-      " [1.         3.16227766 2.23606798 2.         0.        ]\n",
-      " [3.16227766 1.41421356 3.16227766 2.82842712 1.41421356]]\n"
+      "[[1.         2.82842712 2.23606798 3.         2.82842712]\n",
+      " [1.73205081 2.44948974 1.         1.41421356 2.44948974]\n",
+      " [1.41421356 2.23606798 1.73205081 3.         2.82842712]\n",
+      " [2.23606798 3.         2.44948974 3.         1.41421356]]\n"
      ]
     }
    ],
@@ -1102,7 +1059,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1116,7 +1073,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
